panels partially updated

--- a/frontConsumer/src/app/containers/default-layout/default-layout.component.html
+++ b/frontConsumer/src/app/containers/default-layout/default-layout.component.html
@@ -23,9 +23,6 @@
         ><span class="badge badge-pill badge-danger">0</span></a
       >
     </li>
-    <li class="nav-item d-md-down-none">
-      <a class="nav-link" href="#"><i class="icon-list"></i></a>
-    </li>
 
     <li class="nav-item dropdown" dropdown placement="bottom right">
       <a
@@ -50,7 +47,9 @@
         aria-labelledby="simple-dropdown"
       >
         <div class="dropdown-header text-center"><strong>Account</strong></div>
-        <a class="dropdown-item" href="#/Profile"><i class="fa fa-user"></i> Profile</a>
+        <a class="dropdown-item" href="#/Profile"
+          ><i class="fa fa-user"></i> Profile</a
+        >
         <a class="dropdown-item" href="#"
           ><i class="fa fa-bookmark"></i> My offers</a
         >
