--- a/frontProducer/src/app/views/register/register.component.html
+++ b/frontProducer/src/app/views/register/register.component.html
@@ -81,16 +81,16 @@
 
                 <div class="row">
                   <div class="col-md-6">
-                    <!-- Country input -->
+                    <!-- Governorate input -->
                     <div class="input-group mb-3">
                       <mat-form-field>
-                        <mat-label>Country</mat-label>
-                        <mat-select #country>
+                        <mat-label>Governorate</mat-label>
+                        <mat-select #governorate>
                           <mat-option
-                            *ngFor="let country of countries"
-                            [value]="country.name"
+                            *ngFor="let governorate of governorates"
+                            [value]="governorate"
                           >
-                            {{ country.name }}
+                            {{ governorate }}
                           </mat-option>
                         </mat-select>
                       </mat-form-field>
@@ -119,7 +119,7 @@
                       email.value,
                       password.value,
                       username.value,
-                      country.value
+                      governorate.value
                     )
                   "
                 >
@@ -128,7 +128,7 @@
               </form>
             </div>
           </div>
-          <div class="card-footer p-4">
+          <!--<div class="card-footer p-4">
             <div class="row">
               <div class="col-6">
                 <button class="btn btn-block btn-facebook" type="button">
@@ -145,7 +145,7 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div>-->
         </div>
       </div>
     </div>
